crates/piccle-validate/tests/snapshots/snapshots__balance-out-of-range.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.minimum $.layers[0].balance
