crates/piccle-validate/tests/snapshots/snapshots__bloom.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: document
---
Document {
    name: Some(
        "Bloom",
    ),
    description: Some(
        "Two almost-identical tones a few cents apart — a warm, slow swell.",
    ),
    duration_ms: 600,
    master_volume_level: 1.0,
    spatial_effects: [
        Reverb(
            Reverb {
                amount: 0.3,
                tail_ms: 400,
                soften_hz: 4000.0,
            },
        ),
    ],
    layers: [
        Layer {
            id: "tone-a",
            start_ms: 0,
            duration_ms: 600,
            source: Tone(
                ToneSource {
                    wave: Sine,
                    frequencies: [
                        ContourEntry {
                            target: 528.0,
                            hold_ms: 0,
                            transition_ms: 0,
                            transition_curve: Linear,
                        },
                    ],
                    offset_cents: 0,
                },
            ),
            volume: VolumeContour {
                fade_in: FadeStage {
                    ms: 80,
                    curve: Linear,
                },
                fade_out: FadeStage {
                    ms: 100,
                    curve: Linear,
                },
                levels: [
                    ContourEntry {
                        target: 0.4,
                        hold_ms: 200,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                    ContourEntry {
                        target: 0.4,
                        hold_ms: 0,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                ],
            },
            balance: 0.0,
            filters: [],
        },
        Layer {
            id: "tone-b",
            start_ms: 0,
            duration_ms: 600,
            source: Tone(
                ToneSource {
                    wave: Sine,
                    frequencies: [
                        ContourEntry {
                            target: 528.0,
                            hold_ms: 0,
                            transition_ms: 0,
                            transition_curve: Linear,
                        },
                    ],
                    offset_cents: 12,
                },
            ),
            volume: VolumeContour {
                fade_in: FadeStage {
                    ms: 80,
                    curve: Linear,
                },
                fade_out: FadeStage {
                    ms: 100,
                    curve: Linear,
                },
                levels: [
                    ContourEntry {
                        target: 0.3,
                        hold_ms: 200,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                    ContourEntry {
                        target: 0.3,
                        hold_ms: 0,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                ],
            },
            balance: 0.0,
            filters: [],
        },
    ],
}
