crates/piccle-validate/tests/snapshots/snapshots__duplicate-layer-id.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
semantic semantic.duplicate_layer_id $.layers[1].id
