crates/piccle-validate/tests/snapshots/snapshots__duplicate-member.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
parse json.duplicate_member $
