crates/piccle-validate/tests/snapshots/snapshots__echo.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: document
---
Document {
    name: Some(
        "Echo",
    ),
    description: Some(
        "A soft repeating echo on a simple tone — a general-purpose echo primitive preset.",
    ),
    duration_ms: 60,
    master_volume_level: 1.0,
    spatial_effects: [
        Echo(
            Echo {
                delay_ms: 90,
                feedback: 0.2,
                wet_gain: 0.15,
                damp_hz: 3000.0,
            },
        ),
    ],
    layers: [
        Layer {
            id: "tone",
            start_ms: 0,
            duration_ms: 60,
            source: Tone(
                ToneSource {
                    wave: Sine,
                    frequencies: [
                        ContourEntry {
                            target: 880.0,
                            hold_ms: 0,
                            transition_ms: 0,
                            transition_curve: Linear,
                        },
                    ],
                    offset_cents: 0,
                },
            ),
            volume: VolumeContour {
                fade_in: FadeStage {
                    ms: 2,
                    curve: Linear,
                },
                fade_out: FadeStage {
                    ms: 30,
                    curve: Linear,
                },
                levels: [
                    ContourEntry {
                        target: 0.5,
                        hold_ms: 0,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                ],
            },
            balance: 0.0,
            filters: [],
        },
    ],
}
