crates/piccle-validate/tests/snapshots/snapshots__empty-description.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.minLength $.description
