crates/piccle-validate/tests/snapshots/snapshots__fade-in-additional-property.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.additionalProperties $.layers[0].volume.fade_in.duration
