crates/piccle-validate/tests/snapshots/snapshots__fade-in-as-integer.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.type $.layers[0].volume.fade_in
